--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Demo",
+  "name": "demo",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -12,11 +12,15 @@
     "@cometchat-pro/chat": "^3.0.10",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "axios": "^1.3.5",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
     "ipfs-http-client": "^57.0.3",
     "moment": "^2.29.4",
+    "pdfjs-dist": "^3.4.120",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.2",
