--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "aos": "^2.3.1",
     "axios": "^1.3.5",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
+    "framer-motion": "^4.1.17",
+    "fuse.js": "^6.6.2",
     "hardhat": "^2.10.1",
     "ipfs-http-client": "^57.0.3",
     "moment": "^2.29.4",
@@ -30,6 +33,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.2",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
