--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22"
   }
